<resources>
    <string name="app_name">MusicPlayer</string>
    <string name="tip_reach_top">已经到达列表顶端，现在播放最后一曲</string>
    <string name="tip_reach_bottom">已经到达列表底端，现在播放第一曲</string>
    <string name="tip_no_music_file">没有找到音乐文件，请先添加音乐文件</string>

    <string name="theme">主题</string>
    <string name="about">关于</string>
    <string name="about2">简介：这是一个简单的音乐播放器例子，
        除了实现基本的音乐播放功能，还实现了后台音乐播放、切换主题、
        进度条等功能。）</string>
    <string name="quit">退出</string>
    <string name="quit_message">确定要退出吗？</string>

    <string name="playmode">播放模式</string>
    <string name="sequence">循环播放</string>
    <string name="singlecycle">单曲循环</string>
    <string name="listcycle">列表循环</string>
    <string name="listrandom">随机播放</string>

    <string name="sleep">睡眠设置</string>

</resources>
